--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Hubs guided project for Web API I module.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js"
   },
   "repository": {
@@ -26,5 +27,7 @@
   "devDependencies": {
     "nodemon": "^1.18.9"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
